Fix horizontal scroll

--- a/client/src/pages/Home/styles/Home.module.sass
+++ b/client/src/pages/Home/styles/Home.module.sass
@@ -243,6 +243,7 @@
   @include container
   padding-top: 75px
   max-width: 1140px
+  width: 100%
 
   h3
     margin-bottom: 20px
@@ -266,13 +267,13 @@
 
   span:first-child
     line-height: 39px
-    font-size: 36px
+    font-size: 32px
     font-weight: 500
     padding: 7px 0
 
   span:last-child
     line-height: 40px
-    font-size: 35px
+    font-size: 30px
     font-weight: 700
     padding: 7px 0
     margin-left: 5px
@@ -304,7 +305,7 @@
   height: 40px
   cursor: pointer
   background-color: transparent
-  width: 300px
+  width: 270px
   margin: 40px 0
 
   &__link
