--- a/client/src/pages/Home/styles/SlideBar.module.sass
+++ b/client/src/pages/Home/styles/SlideBar.module.sass
@@ -77,6 +77,7 @@
 
 .feedback-cell
   @include container
+  height: 350px
   font-family: Raleway, sans-serif
   padding: 20px 20px 0 20px
   background-color: white
